fix: better white space management

--- a/assets/scss/layouts/articles.scss
+++ b/assets/scss/layouts/articles.scss
@@ -1,5 +1,4 @@
 .articles {
-  margin-top: 2em;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 36px;
